@@ -31,6 +31,7 @@ extern int PyMOLReady;
 extern int PyMOLTerminating; /* flag to help prevent crashes on shutdown with Windows */
 extern int PMGUI;
 extern int StereoCapable;
+extern int Security;
 
 #ifdef _PYMOL_MODULE
 int was_main(void);
